--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,6 @@ edition = "2024"
 anyhow = "1.0.100"
 good_lp = "1.14.2"
 itertools = "0.14.0"
+memoize = "0.5.1"
 num-traits = "0.2.19"
 petgraph = "0.8.3"
